--- a/Informe/cu.tex
+++ b/Informe/cu.tex
@@ -49,7 +49,7 @@
 \newcommand{\apcr}{{\bf Apostador de Craps }}
 \newcommand{\emc}{{\bf Empleado Contable }}
 \newcommand{\emk}{{\bf Empleado de Marketing }}
-\newcommand{\jucr}{{\bf Jugador de Craps }}
+\newcommand{\jucr}{{\bf Tirador de Craps}}
 \newcommand{\mani}{{\bf Manipulador }}
 %CASOS DE USO
 \newcommand{\ic}{{\bf Ingresando al casino }}
