--- a/trunk/Informe/CasinoOnline.tex
+++ b/trunk/Informe/CasinoOnline.tex
@@ -9,7 +9,7 @@
 
 \usepackage[latin1]{inputenc}
 
-\usepackage{color}
+%\usepackage{color}
 
 \usepackage{hyperref}
 %\usepackage[all]{hypcap}
@@ -216,7 +216,7 @@ Sugerimos un estudio de campo sobre  la tendencia consumista de estos clientes p
 
 	\subsection{Restricciones}
 	
-	Se determinó que la implementación del proyecto sea realizada en Java o C/#
+	Se determinó que la implementación del proyecto sea realizada en Java o %C$/#$
 	
 	\subsection{Supuestos y dependencias}
 
