--- a/trunk/Informe/cu.tex
+++ b/trunk/Informe/cu.tex
@@ -43,7 +43,8 @@
 \newcommand{\adm}{{\bf Administrador }}
 \newcommand{\invi}{{\bf Invitado }}
 %\newcommand{\ptra}{{\bf Potencial jugador de tragamonedas }}
-\newcommand{\jutra}{{\bf Jugador de Tragamonedas }}
+\newcommand{\jutra}{{\bf Potencial Jugador de Tragamonedas }}
+\newcommand{\aptraga}{{\bf Jugador Tragamonedas}}
 \newcommand{\pjc}{{\bf Potencial jugador de Craps }}
 \newcommand{\jc}{{\bf Jugador de Craps }}
 \newcommand{\apcr}{{\bf Apostador de Craps }}
