modificacion casos de uso craps y del trgamonedas correccion diagrama casos de uso y herencia correccion DA configuraciones.png

--- a/Informe/cu.tex
+++ b/Informe/cu.tex
@@ -43,7 +43,8 @@
 \newcommand{\adm}{{\bf Administrador }}
 \newcommand{\invi}{{\bf Invitado }}
 %\newcommand{\ptra}{{\bf Potencial jugador de tragamonedas }}
-\newcommand{\jutra}{{\bf Jugador de Tragamonedas }}
+\newcommand{\jutra}{{\bf Potencial Jugador de Tragamonedas }}
+\newcommand{\aptraga}{{\bf Jugador Tragamonedas}}
 \newcommand{\pjc}{{\bf Potencial jugador de Craps }}
 \newcommand{\jc}{{\bf Jugador de Craps }}
 \newcommand{\apcr}{{\bf Apostador de Craps }}
