--- a/Informe/porfuncionalidad.tex
+++ b/Informe/porfuncionalidad.tex
@@ -588,23 +588,23 @@ En el siguiente Diagrama de actividades se puede observar a grandes rasgos las a
 
 \begin{cu}{\jtra}
 	\descripxizq=1cm
-		\defln{Este caso de uso explica como un \jutra que ha ingresado en el casino puede jugar en una mesa de tragamonedas}
-		\actor{\jutra}
-		\pre{El \jutra debe estar dentro del casino, dentro de una mesa de Tragamonedas y no estar jugando en ninguna otra mesa}
-		\post{El \jutra ha jugado al tragamonedas, si ha resultado ganador se modifica su saldo}
+		\defln{Este caso de uso explica como un \aptraga que ha ingresado en el casino puede jugar en una mesa de tragamonedas}
+		\actor{\aptraga}
+		\pre{El \aptraga debe estar dentro del casino, dentro de una mesa de Tragamonedas y no estar jugando en ninguna otra mesa}
+		\post{El \aptraga ha jugado al tragamonedas, si ha resultado ganador se modifica su saldo}
 
 	\begin{cursoe}{}
 	
 		
-    \paso{1 El \jutra selecciona entre una y tres fichas para apostar }{}
+    \paso{1 El \aptraga selecciona entre una y tres fichas para apostar }{}
 		
-		\paso{2 Si el \jutra no es VIP el sistema verifica si tiene saldo suficiente para la apuesta}{}
+		\paso{2 Si el \aptraga no es VIP el sistema verifica si tiene saldo suficiente para la apuesta}{}
 			
 		\paso{3 El sistema valida la apuesta y descuenta el monto del saldo del jugador}{3.1 Error: El sistema informa que no tiene saldo suficiente para realizar esta apuesta. Ir a Fin C.U.}
 				
 		\paso{4 El sistema incrementa y muestra el pozo Premio Gordo Progresivo}{}
 				
-		\paso{5 El \jutra decide comenzar la jugada}{}
+		\paso{5 El \aptraga decide comenzar la jugada}{}
 		
 		\paso{6 El sistema da comienzo al juego}{}	
 		
