--- a/toDo.txt
+++ b/toDo.txt
@@ -1,12 +1,7 @@
-Ver CU -> preg ISIS
 
-Agrupar requerimientos(ISIS)
 
-trazabilidad entre CU y requerimientos.(ISIS)
+trazabilidad entre CU y requerimientos.
 
-pagina 22 ojo ver ABRIENDO CASINO (isis)
-
-sacar del saliendo del casino la parte de cancelar apuestas (ISIS)
 
 agregar invitado a Diagrama de Contexto (falta asociarlo con los cu correspondientes)
 
@@ -16,8 +11,6 @@ agregar algo del invitado en los requerimientos.
 
 nota: sacar referncias a los CU en el informe.
 
-ver tema de dibujo de los CU y la herencia de los actores, agregando 
-los CU q mande ISIS (ver domingo)
 
 mandar FSM Jugada craps a tutor para que la vea.
 mandar FSM coupiet a tutor para q la vea.
@@ -26,7 +19,6 @@ mandar FSM coupiet a tutor para q la vea.
 
 REVISAR Y REHACER DIAGRAMA DE CONTEXTO (POR CASOS DE USO DE ISIS)
 REVISAR Y REHACER DIAGRAMA DE CASOS DE USO (POR CASOS DE USO DE ISIS)
-REVISAR Y REHACER DIAGRAMA DE HERENCIA (POR CASOS DE USO DE ISIS)
 
 
 REVISAR SI DEJAR LAS COSAS EN ANEXOS
