--- a/trunk/Informe/explDClases.tex
+++ b/trunk/Informe/explDClases.tex
@@ -9,7 +9,7 @@ Explicamos brevemente que representa cada uno de estos conceptos.
 
 	\item Jugador: Repesenta a un jugador del casino.
 
-	\item MesaTragamonedas: repesenta todas las mesas de tragamonedas que se abrieron desde que se abrio el casino (Cada mesa que es o fue usada por un jugadr del casino). Dicha mesa no se reabre.
+	\item MesaTragamonedas: repesenta todas las mesas de tragamonedas que se abrieron desde que se abrio el casino (Cada mesa que es o fue usada por un jugadr del casino). Dicha mesa no se reabre. Pero siempre que un cliente desee, podra abrir una mesa nueva. Como no hay limitacion el el modelo conceptual pueden existir tantas mesas se quiera. Esto satisface el requerimiento: \textbf{No debe haber limite de mesas abiertas: Los clientes podrán ingresar a las mesas de los juegos y no habra un limite de ellas} \label{2f}
 
 	\item ResutadoPosibleTragamonedas: Representa todas los resultados a una jugada, que finalizan una apuesta particular. (representa a la accion concreta de perder o ganar para una apuesta, los resultados que no definen la apuesta, no aparecen)
 
