secciones 8 de requerimiento asociadas

--- a/Informe/lr.tex
+++ b/Informe/lr.tex
@@ -63,9 +63,9 @@
 
 \item\textsc{REQUERIMIENTOS GENERALES DEL CASINO - MODO DIRIGIDO}
 \begin{enumerate}
-\item El sistema deberá contar con un modo dirigido: Se podra poner en modo dirigido a cada uno de los juegos y todas sus respectivas mesas tendrán como resultado el definido por el manipulador de modos.  \ff - \ii
-\item El sistema deberá permitir generar jugada feliz manualmente: El manipulador de modos podrá decidir la ocurrencia de jugadas felices mientras no se solapen simultaneamente en los juegos del casino.  \ff - \ii
-\item El sistema deberá permitir generar jugada todos ponen manualmente: El manipulador de modos podrá decidir la ocurrencia de jugadas todos ponen mientras no se solapen en la misma jugada. \ff - \ii
+\item El sistema deberá contar con un modo dirigido: Se podra poner en modo dirigido a cada uno de los juegos y todas sus respectivas mesas tendrán como resultado el definido por el manipulador de modos.  \ff - \ii. \rrr \ref{8a}
+\item El sistema deberá permitir generar jugada feliz manualmente: El manipulador de modos podrá decidir la ocurrencia de jugadas felices mientras no se solapen simultaneamente en los juegos del casino.  \ff - \ii. \rrr \ref{8b}
+\item El sistema deberá permitir generar jugada todos ponen manualmente: El manipulador de modos podrá decidir la ocurrencia de jugadas todos ponen mientras no se solapen en la misma jugada. \ff - \ii. \rrr \ref{8c}
 \end{enumerate}
 
 \item\textsc{REQUERIMIENTOS DE JUEGO TRAGAMONEDAS}
