--- a/trunk/Informe/lr.tex
+++ b/trunk/Informe/lr.tex
@@ -20,11 +20,11 @@
 \item\textsc{REQUERIMIENTOS GENERALES DEL CASINO - MANEJO DE MESAS}
 \begin{enumerate}
 \item No se debe permitir que un jugador juegue en mas de una mesa al mismo tiempo: Para ingresar a una mesa de cualquier juego el jugador no podrá estar adentro de ninguna otra mesa de ningun juego.  \ff - \dd. \rrr \ref{2a1} y en \ref{2a2}
-\item Los clientes podrán abrir mesas: Todos los clientes tendran la opción de abrir una nueva mesa para cualquiera de los juegos.  \ff - \ee
-\item Los clientes podrán unirse a mesas (sí el juego lo permite): El tragamonedas no permite unirse a una mesa, pero en el Craps el jugador podrá elegir a cual de las mesas habilitadas se unirá.  \ff - \ii
-\item Las mesas vacias se cerraran automáticamente: Cuando un jugador salga de un juego el sitema automáticamente cerrara la mesa a menos que haya otros jugadores en ella.  \ff - \ee
-\item El casino no se podrá cerrar mientras haya gente jugando: El casino solo podrá cerrar cuando todos los jugadores hayan salido del mismo.  \ff - \ii
-\item No debe haber limite de mesas abiertas: Los clientes podrán ingresar a las mesas de los juegos y no habra un limite de ellas.  \ff - \ii
+\item Los clientes podrán abrir mesas: Todos los clientes tendran la opción de abrir una nueva mesa para cualquiera de los juegos.  \ff - \ee. \rrr \ref{2b1} y en \ref{2b2}
+\item Los clientes podrán unirse a mesas (sí el juego lo permite): El tragamonedas no permite unirse a una mesa, pero en el Craps el jugador podrá elegir a cual de las mesas habilitadas se unirá.  \ff - \ii. \rrr \ref{2c}
+\item Las mesas vacias se cerraran automáticamente: Cuando un jugador salga de un juego el sitema automáticamente cerrara la mesa a menos que haya otros jugadores en ella.  \ff - \ee. \rrr \ref{2d1} y en \ref{2d2}
+\item El casino no se podrá cerrar mientras haya gente jugando: El casino solo podrá cerrar cuando todos los jugadores hayan salido del mismo.  \ff - \ii. \rrr \ref{2e}
+\item No debe haber limite de mesas abiertas: Los clientes podrán ingresar a las mesas de los juegos y no habra un limite de ellas.  \ff - \ii. \rrr \ref{2f}
 \end{enumerate}
 
 \item\textsc{REQUERIMIENTOS GENERALES DEL CASINO - PANTALLA}
